--- a/Fase 1/.vscode/launch.json
+++ b/Fase 1/.vscode/launch.json
@@ -1,26 +1,31 @@
 {
-    "version": "0.2.0",
-    "configurations": [
+  "configurations": [
       {
-        "name": "C/C++: g++ build and debug active file",
-        "type": "cppdbg",
-        "request": "launch",
-        "program": "${fileDirname}/${fileBasenameNoExtension}",
-        "args": [],
-        "stopAtEntry": false,
-        "cwd": "${workspaceFolder}",
-        "environment": [],
-        "externalConsole": false,
-        "MIMode": "gdb",
-        "miDebuggerPath": "/usr/bin/gdb",
-        "setupCommands": [
-          {
-            "description": "Enable pretty-printing for gdb",
-            "text": "-enable-pretty-printing",
-            "ignoreFailures": true
-          }
-        ],
-        "preLaunchTask": "C/C++: g++ build active file"
+          "name": "C/C++: g++ Compilar y depurar el archivo activo",
+          "type": "cppdbg",
+          "request": "launch",
+          "program": "${fileDirname}/${fileBasenameNoExtension}",
+          "args": [],
+          "stopAtEntry": false,
+          "cwd": "${fileDirname}",
+          "environment": [],
+          "externalConsole": false,
+          "MIMode": "gdb",
+          "setupCommands": [
+              {
+                  "description": "Habilitar la impresión con sangría para gdb",
+                  "text": "-enable-pretty-printing",
+                  "ignoreFailures": true
+              },
+              {
+                  "description": "Establecer tipo de desensamblado en Intel",
+                  "text": "-gdb-set disassembly-flavor intel",
+                  "ignoreFailures": true
+              }
+          ],
+          "preLaunchTask": "C/C++: g++ compilar archivo activo",
+          "miDebuggerPath": "/usr/bin/gdb"
       }
-    ]
-  }
+  ],
+  "version": "2.0.0"
+}
